--- a/Assets/Game/DoorSystem/DoorSystem.asmdef
+++ b/Assets/Game/DoorSystem/DoorSystem.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:7fb004bddba04fa28f9da0be725b4db9",
-        "GUID:daa5b2a852af442584431e0ec47c9908"
+        "GUID:daa5b2a852af442584431e0ec47c9908",
+        "GUID:650285d4250223242888860c303ad68e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
