--- a/Assets/Game/EquipmentSystem/EquipmentSystem.asmdef
+++ b/Assets/Game/EquipmentSystem/EquipmentSystem.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:daa5b2a852af442584431e0ec47c9908"
+        "GUID:daa5b2a852af442584431e0ec47c9908",
+        "GUID:650285d4250223242888860c303ad68e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
