--- a/Assets/Game/InteractionSystem/InteractionSystem.asmdef
+++ b/Assets/Game/InteractionSystem/InteractionSystem.asmdef
@@ -2,7 +2,8 @@
     "name": "InteractionSystem",
     "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:650285d4250223242888860c303ad68e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
