--- a/Assets/Game/ProjectileSystem/ProjectileSystem.asmdef
+++ b/Assets/Game/ProjectileSystem/ProjectileSystem.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:650285d4250223242888860c303ad68e",
-        "GUID:7fb004bddba04fa28f9da0be725b4db9"
+        "GUID:7fb004bddba04fa28f9da0be725b4db9",
+        "GUID:e522abf7b66a4d5490e934c487879913"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
