--- a/Assets/Game/ProgressBar/ProgressBar.asmdef
+++ b/Assets/Game/ProgressBar/ProgressBar.asmdef
@@ -1,8 +1,8 @@
 {
-    "name": "HealthSystem",
+    "name": "ProgressBar",
     "rootNamespace": "",
     "references": [
-        "GUID:7fb004bddba04fa28f9da0be725b4db9"
+        "GUID:e522abf7b66a4d5490e934c487879913"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
