--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,9 @@
 
 # Ignore behavior designer to avoid lawsuits
 /[Aa]ssets/Behavior Designer/*/
+/[Aa]ssets/Behavior Designer Movement/*/
 /[Aa]ssets/Behavior Designer/
+/[Aa]ssets/Behavior Designer Movement/
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # [Aa]ssets/AssetStoreTools*
