--- a/Assets/Game/GrabSystem/GrabSystem.asmdef
+++ b/Assets/Game/GrabSystem/GrabSystem.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:daa5b2a852af442584431e0ec47c9908",
-        "GUID:e522abf7b66a4d5490e934c487879913"
+        "GUID:e522abf7b66a4d5490e934c487879913",
+        "GUID:650285d4250223242888860c303ad68e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
