Persisting player state

--- a/Assets/Game/EquipmentSystem/EquipmentSystem.asmdef
+++ b/Assets/Game/EquipmentSystem/EquipmentSystem.asmdef
@@ -6,7 +6,8 @@
         "GUID:daa5b2a852af442584431e0ec47c9908",
         "GUID:650285d4250223242888860c303ad68e",
         "GUID:430db3c4334944c7892803fb5a8f7636",
-        "GUID:36d7a1dd60bb2d244883b336b5251872"
+        "GUID:36d7a1dd60bb2d244883b336b5251872",
+        "GUID:a6c444b71cfb417f88c6c2889c913e78"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
