--- a/Assets/Game/InteractionSystem/InteractionSystem.asmdef
+++ b/Assets/Game/InteractionSystem/InteractionSystem.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:650285d4250223242888860c303ad68e",
-        "GUID:9a79be5b0133067448e9888cfd87d7da"
+        "GUID:9a79be5b0133067448e9888cfd87d7da",
+        "GUID:a6c444b71cfb417f88c6c2889c913e78"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
