--- a/Assets/Game/QuestSystem/QuestSystem.asmdef
+++ b/Assets/Game/QuestSystem/QuestSystem.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:a6c444b71cfb417f88c6c2889c913e78",
-        "GUID:650285d4250223242888860c303ad68e"
+        "GUID:650285d4250223242888860c303ad68e",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
