--- a/Assets/Game/IconGeneration/IconGeneration.asmdef
+++ b/Assets/Game/IconGeneration/IconGeneration.asmdef
@@ -2,7 +2,8 @@
     "name": "IconGeneration",
     "rootNamespace": "",
     "references": [
-        "GUID:650285d4250223242888860c303ad68e"
+        "GUID:650285d4250223242888860c303ad68e",
+        "GUID:478a2357cc57436488a56e564b08d223"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
