--- a/Assets/Game/DialogueSystem/DialogueSystem.asmdef
+++ b/Assets/Game/DialogueSystem/DialogueSystem.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:650285d4250223242888860c303ad68e",
-        "GUID:daa5b2a852af442584431e0ec47c9908"
+        "GUID:daa5b2a852af442584431e0ec47c9908",
+        "GUID:2ea64e2c95da48698a8c9e5f3011281a",
+        "GUID:a6c444b71cfb417f88c6c2889c913e78"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
